# real_state

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: app.js  index.html  style.css
docs/data/: listings.json
docs/superpowers/specs/: 2026-07-19-portal-research-and-scraper-design.md
scraper/: browser.py  engine.py  models.py  normalizer.py
scraper/adapters/: base.py  fincaraiz.py  generic.py  houm.py  metrocuadrado.py  portals.py
scraper/storage/: db.py  schema.sql
scripts/: build_dataset.py
tests/: test_bulk_adapters.py  test_dataset_schema.py  test_engine.py  test_fincaraiz_adapter.py  test_normalizer.py  test_portal_registry.py  test_storage.py
tests/fixtures/fincaraiz/: listing_123456.html  listing_193410777.html  listing_malformed.html  search_usaquen.html
tests/fixtures/houm/: marketplace_page1.json
tests/fixtures/metrocuadrado/: search_flight_segment.html
